# ByteDMD

./: README.md  bytedmd.py  bytedmd_belady.py  bytedmd_cold.py  bytedmd_edf.py  bytedmd_fx.py  bytedmd_ir.py  bytedmd_managed.py  bytedmd_settrace.py  bytedmd_strict.py  manual_matmul.py  motivation.md  pyproject.toml  test_bytedmd.py  test_bytedmd.wl  test_bytedmd_belady.py  test_bytedmd_bytecode.py  test_bytedmd_cold.py  test_bytedmd_edf.py  test_bytedmd_fx.py  test_bytedmd_ir.py  test_bytedmd_settrace.py  test_bytedmd_splitting_lb.py  test_bytedmd_strict.py  test_escape_hatches.py  test_escape_hatches_settrace.py  test_gotchas.py  test_linalg.py  test_microgpt.py
benchmarks/: README.md  attention_report.md  attention_results.json  benchmark_attention.py  benchmark_linalg.py  benchmark_linalg_belady.py  benchmark_linalg_gc.py  benchmark_matmul.py  benchmark_microgpt.py  benchmark_sparse_parity.py  matmul.wl  matvec.wl  recursive_matmul.wl  strassen.wl
docs/: ceil_figure.py  manhattan-diamond.md  manhattan_figure.py  manhattan_function_figure.py  measure_microgpt.py  microgpt_figure.py
experiments/: README.md
gemini/: 15apr26-dmdlive-analysis.md  README.md  arithmetic-intensity-visualizers.md  belady-min-lower-bound.md  belady-optimal-cost.md  better-heuristics.md  beyond-mattson-prior-work.md  bytedmd-cold-bug.md  bytedmd-instruction-list.md  bytedmd-logn-proof.md  bytedmd-naive-formulas.md  bytedmd-upper-bound.md  bytedmd_explicit_rmm.md  capacity-envelope.md  convert_to_html.py  copy-spacedmd.md  copy_space_dmd_bound.md  debug-spacedmd-scratchpad.md  (+66 more)
(+125 files in other folders)
